--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -222,8 +222,8 @@
     </div>
 </center>
 
-<script src="annyang.min.js"></script>
-<script src="main.js"></script>
+<script src="js/annyang.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 
 </html>
